k8s/01_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-pod
  labels:
    app: helloworld
spec:
  containers:
  - name: helloworld-container
    image: phill97/helloworld:latest
