k8s/06_persistance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld-container
          image: phill97/helloworld:latest
          volumeMounts:
          - mountPath: "/data"
            name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: helloworld-pvc
